--- a/assets/css/partials/theme/_theme.scss
+++ b/assets/css/partials/theme/_theme.scss
@@ -84,12 +84,12 @@
   padding: 20px 40px;
   position: relative;
   border-top: 2px solid;
-  border-bottom: 2px solid;
 }
 
 .single_second-column {
   width: 62%;
-  border: 2px solid;
+  border-top: 2px solid;
+  border-left: 2px solid;
 }
 
 .single_second-column img {
@@ -98,13 +98,15 @@
 
 .single_slider-column {
   width: 62%;
-  border: 2px solid;
+  border-top: 2px solid;
+  border-left: 2px solid;
 }
 
 .single_third-column {
   width: 9%;
   padding: 20px 40px;
   position: relative;
+  border-left: 2px solid;
 }
 
 .post-content {
